--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:label="@string/login">
+            android:label="NemSport">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
