--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NemSport">
         <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login" />
+        <activity
             android:name=".UI.CreateEventActivity"
-            android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/title_activity_create_event"
-            android:parentActivityName=".FragmentContainerActivity"/>
+            android:parentActivityName=".FragmentContainerActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".FragmentContainerActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_fragment_container" />
+            android:label="@string/title_activity_fragment_container"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:label="NemSport">
+            android:label="NemSport"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
