--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
     implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 
 
     testImplementation 'junit:junit:4.+'
