removed: comment in CalendarEventAdapter.kt removed: cemment in CreateEventActivity.kt added: uid to UserModel.kt added: get user to DatabaseHelper.kt added: get username to EventActivity.kt added: consturuct removed: shit from MainActivity.kt added: string to constructor
Took 1 hour 0 minutes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
             android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/title_activity_create_event"
-            android:parentActivityName=".FragmentContainerActivity"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".FragmentContainerActivity"/>
         <activity
             android:name=".FragmentContainerActivity"
             android:exported="true"
