--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.bkskjold.nemsport">
+    package="dk.bkskjold.nemsport" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NemSport">
+        android:theme="@style/Theme.NemSport" >
+        <activity
+            android:name=".UI.edit_event.EditEventActivity"
+            android:exported="true" />
+        <activity
+            android:name=".UI.edit_event.EventAdministrationActivity"
+            android:exported="true" />
         <activity
             android:name=".UI.profile.EditProfileActivity"
             android:exported="true" />
@@ -43,7 +49,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="NemSport"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
