comments and small changes
Co-Authored-By: Jenswill <61697954+Jenswill@users.noreply.github.com>

Took 46 minutes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,10 +32,10 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".UI.EventActivity"
+            android:name=".UI.event.EventActivity"
             android:exported="false" />
         <activity
-            android:name=".UI.CreateEventActivity"
+            android:name=".UI.event.CreateEventActivity"
             android:exported="true"
             android:label="@string/title_activity_create_event"
             android:parentActivityName=".FragmentContainerActivity"
